@@ -2,7 +2,7 @@
 # Test the windows specific win32reg module.
 # Only win32reg functions not hit here: FlushKey, LoadKey and SaveKey
 
-from _winreg import *
+from winreg import *
 import os, sys
 import unittest
 
