@@ -1559,7 +1559,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\PC\_winreg.c"
+				RelativePath="..\..\PC\winreg.c"
 				>
 			</File>
 			<File
