@@ -52,7 +52,7 @@ dsp=%PYTHONPREFIX%\PCBuild\zlib.dsp
 cl=/I %PYTHONPREFIX%\..\zlib-1.1.4 /D _WINDOWS /D WIN32 
 libs=%PYTHONPREFIX%\..\zlib-1.1.4\zlib.lib /nodefaultlib:libc
 
-[_winreg]
+[winreg]
 dsp=%PYTHONPREFIX%\PCBuild\winreg.dsp
 libs=advapi32.lib
 
